log
Thu 20 Apr 2023 10:09:03 PM UTC: 
 tests:  1|8
total_score: 0/70
a187b08
Thu 20 Apr 2023 10:30:21 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:23: error: invalid initializer
   41 |     TreeMap newTree = (TreeMap *) malloc(sizeof(TreeMap));
      |                       ^
treemap.c:42:12: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   42 |     newTree->root = NULL;
      |            ^~
treemap.c:43:12: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   43 |     newTree->current = NULL;
      |            ^~
treemap.c:44:12: error: incompatible types when returning type ‘TreeMap’ but ‘TreeMap *’ was expected
   44 |     return newTree;
      |            ^~~~~~~
treemap.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
85a6fc3
Thu 20 Apr 2023 10:30:41 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
0fad6cf
Thu 20 Apr 2023 10:31:32 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|8
total_score: 0/70
58b7599
Thu 20 Apr 2023 10:32:47 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
a4562e5
Thu 20 Apr 2023 10:32:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:25: error: assignment to ‘int (*)(void *, void *)’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   44 |     newTree->lower_than = 1;
      |                         ^
cc1: all warnings being treated as errors
Compilation failed
c33b75a
Thu 20 Apr 2023 10:33:09 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
f329f6f
Thu 20 Apr 2023 10:35:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:27: error: ‘false’ undeclared (first use in this function)
   44 |     newTree->lower_than = false;
      |                           ^~~~~
treemap.c:5:1: note: ‘false’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    4 | #include "treemap.h"
  +++ |+#include <stdbool.h>
    5 | 
treemap.c:44:27: note: each undeclared identifier is reported only once for each function it appears in
   44 |     newTree->lower_than = false;
      |                           ^~~~~
Compilation failed
08ba558
Thu 20 Apr 2023 10:35:29 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
7a02a7d
Thu 20 Apr 2023 10:39:10 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:27: error: ‘lt’ undeclared (first use in this function)
   44 |     newTree->lower_than = lt;
      |                           ^~
treemap.c:44:27: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
074686f
Thu 20 Apr 2023 10:39:19 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
883d53e
Thu 20 Apr 2023 10:39:52 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:27: error: ‘lt’ undeclared (first use in this function)
   44 |     newTree->lower_than = lt;
      |                           ^~
treemap.c:44:27: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
206f07e
Thu 20 Apr 2023 10:40:00 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
ab6840c
Thu 20 Apr 2023 10:40:40 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
06bfd3b
Thu 20 Apr 2023 10:42:43 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:29: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   44 |     newTree->lower_than = (0,0);
      |                             ^
treemap.c:44:25: error: assignment to ‘int (*)(void *, void *)’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   44 |     newTree->lower_than = (0,0);
      |                         ^
cc1: all warnings being treated as errors
Compilation failed
f5e7db3
Thu 20 Apr 2023 10:43:00 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
e06f588
Thu 20 Apr 2023 10:45:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
8ee8fd4
Thu 20 Apr 2023 11:06:58 PM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:21: error: implicit declaration of function ‘tree_lower’ [-Werror=implicit-function-declaration]
   79 |         int valor = tree_lower(key,current->key);
      |                     ^~~~~~~~~~
treemap.c:79:43: error: ‘TreeNode’ has no member named ‘key’
   79 |         int valor = tree_lower(key,current->key);
      |                                           ^~
cc1: all warnings being treated as errors
Compilation failed
d24f668
Thu 20 Apr 2023 11:07:36 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:49: error: ‘TreeNode’ has no member named ‘key’
   79 |         int valor = tree->lower_than(key,current->key);
      |                                                 ^~
Compilation failed
8e7d3a6
Thu 20 Apr 2023 11:07:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
dc33a7c
Thu 20 Apr 2023 11:08:30 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:20: error: returning ‘Pair **’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   81 |             return &(current->pair);
      |                    ^~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bc57e5f
Thu 20 Apr 2023 11:08:42 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
5f28f96
Thu 20 Apr 2023 11:09:24 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|7
total_score: 5/70
7687dee
Thu 20 Apr 2023 11:20:41 PM UTC: 
 treemap.c | 20 +++++++++-----------
 1 file changed, 9 insertions(+), 11 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:80:20: error: ‘current’ undeclared (first use in this function)
   80 |             return current->pair;
      |                    ^~~~~~~
treemap.c:80:20: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
5e14e5c
Thu 20 Apr 2023 11:20:56 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  11|6
total_score: 15/70
6d84e13
Thu 20 Apr 2023 11:21:23 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
437048a
Thu 20 Apr 2023 11:52:00 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
c9ea01b
Fri 21 Apr 2023 12:10:11 AM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:24: error: expected expression before ‘=’ token
   54 |         tree->current- = insert;
      |                        ^
Compilation failed
aac718e
Fri 21 Apr 2023 12:10:18 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
4e08569
Fri 21 Apr 2023 12:24:05 AM UTC: 
 treemap.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:63:16: error: expected expression before ‘)’ token
   63 |             if()
      |                ^
treemap.c: In function ‘searchTreeMap’:
treemap.c:95:66: error: expected ‘)’ before ‘{’ token
   95 |         } else if (tree->lower_than(nodeTree->pair->key,key) == 1 {
      |                   ~                                              ^~
      |                                                                  )
treemap.c:101:5: error: expected expression before ‘}’ token
  101 |     }
      |     ^
Compilation failed
d0357f6
Fri 21 Apr 2023 12:24:44 AM UTC: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:56:15: error: unused variable ‘insert’ [-Werror=unused-variable]
   56 |     TreeNode* insert = createTreeNode(key,value);
      |               ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
2cf0ef6
Fri 21 Apr 2023 12:25:06 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
76cee31
